[package]
name = "spotifyscraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
scraper = "0.16.0"
serde = "1.0.160"
serde_json = "1.0.96"
base64 = "0.21.0"
async-std = {version = "1.12.0", features = ["attributes"]}
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
